CallMD/src/objects/Scheduling__c.object
<CustomObject>
    <fields>
        <fullName>Day_of_Week__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Day of Week</label>
        <referenceTo>Day_of_Week__c</referenceTo>
        <relationshipLabel>Schedullng</relationshipLabel>
        <relationshipName>Schedullng</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Doctor__c</fullName>
        <label>Doctor</label>
        <referenceTo>Doctor__c</referenceTo>
        <relationshipLabel>Schedullng</relationshipLabel>
        <relationshipName>Schedullng</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Time</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Time</valueSetName>
        </valueSet>
    </fields>
    <label>Scheduling</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Schedulng ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduling</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>